# foyer

./: index.html  package.json  vite.config.ts  vite.config.ts.timestamp-1677743661191.mjs
src/: App.svelte  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  img_uri_handler.rs  initialise.sql  main.rs  string_error.rs  types.rs
src/lib/: ContextMenu.svelte  GridLayout.svelte  Main.svelte  Photo.svelte  Sidebar.svelte  TagManager.svelte
src/stores/: photos.ts  tags.ts  viewing.ts
src/types/: photo.ts  tags.ts
src/utils/: create-tag.ts  fetch-photos.ts  fetch-tags.ts  init.ts  search.ts  upload.ts
